--- a/src/main/resources/i8n/messages.properties
+++ b/src/main/resources/i8n/messages.properties
@@ -1,3 +1,9 @@
+# Login pagina
 login.page.title=Log in
-
 login.page.header.caption=A summer to never forget
+login.page.username.placeholder=Username
+login.page.password.placeholder=Password
+login.page.forgotpassword=Forgot your password?
+
+# Home pagina
+home.page.title=Home
