--- a/src/main/resources/i8n/messages_nl.properties
+++ b/src/main/resources/i8n/messages_nl.properties
@@ -1,3 +1,9 @@
+# Login pagina
 login.page.title=Inloggen
-
 login.page.header.caption=Een zomer om nooit te vergeten
+login.page.username.placeholder=Gebruikersnaam
+login.page.password.placeholder=Wachtwoord
+login.page.forgotpassword=Wachtwoord vergeten?
+
+# Home pagina
+home.page.title=Home
