validatie proberen fixe maar werk nit

--- a/src/main/resources/i8n/messages.properties
+++ b/src/main/resources/i8n/messages.properties
@@ -6,3 +6,7 @@ login.page.password.placeholder=Password
 
 # Home pagina
 home.page.title=Home
+
+#toevoegen optreden
+Validation.naamInvalid=Name is invalid
+Validation.naamNull=Name is required
