--- a/src/main/resources/i8n/messages_nl.properties
+++ b/src/main/resources/i8n/messages_nl.properties
@@ -6,3 +6,7 @@ login.page.password.placeholder=Wachtwoord
 
 # Home pagina
 home.page.title=Home
+
+#toevoegen optreden
+Validation.naamInvalid=Naam is ongeldig
+Validation.naamNull=Name is verplicht
