alle vertaling toegevoegd

--- a/src/main/resources/i8n/messages.properties
+++ b/src/main/resources/i8n/messages.properties
@@ -1,12 +1,47 @@
 # Login pagina
-login.page.title=Log in
+login.page.title=Login
 login.page.header.caption=A summer to never forget
 login.page.username.placeholder=Username
 login.page.password.placeholder=Password
 
+# Nav bar
+nav.MijnTicketten = My Tickets
+
+# Tabel
+tabel.header.naam=Name
+tabel.header.datumUur=Date and Time
+tabel.header.planning=Schedule
+tabel.header.regio=Region
+tabel.header.beschikbarePlaatsen=Available Places
+tabel.header.prijs=Price
+tabel.header.reedsGekocht=Already Purchased
+tabel.content.wijzigPlanning=Change Schedule
+tabel.content.koopTicket=Buy Ticket
+tabel.header.genre=Genre
+tabel.header.aantalTickets=Number of Tickets
+tabel.header.startuur=Start Time
+tabel.header.acties=Actions
+tabel.header.subgenres=Subgenres
+tabel.header.festNum1=Festival Number 1
+tabel.header.festNum2=Festival Number 2
+
+# Extra
+tussenVoegselTijd=at
+access-denied.btnLogOut=Log out
+btn.verwijder=Delete
+btn.voegOptredenToe=Add Performance
+
 # Home pagina
 home.page.title=Home
+home.titel.regios=Regions
+home.titel.genres=Genres
 
-#toevoegen optreden
+# Mijn ticketten
+mijnTicketten.titel=My Tickets:
+
+# Ticket kopen
+festival.info=This is a festival called {0} <br /> There are {1} tickets left.
+
+# Toevoegen optreden
 Validation.naamInvalid=Name is invalid
 Validation.naamNull=Name is required
