--- a/src/main/resources/i8n/messages_nl.properties
+++ b/src/main/resources/i8n/messages_nl.properties
@@ -4,9 +4,44 @@ login.page.header.caption=Een zomer om nooit te vergeten
 login.page.username.placeholder=Gebruikersnaam
 login.page.password.placeholder=Wachtwoord
 
+# Nav bar
+nav.MijnTicketten = Mijn Ticketten
+
+# Tabel
+tabel.header.naam=Naam
+tabel.header.datumUur=Datum en Aanvangsuur
+tabel.header.planning=Planning
+tabel.header.regio=Regio
+tabel.header.beschikbarePlaatsen=Beschikbare Plaatsen
+tabel.header.prijs=Prijs
+tabel.header.reedsGekocht=Reeds Gekocht
+tabel.content.wijzigPlanning=Wijzig Planning
+tabel.content.koopTicket=Koop Ticket
+tabel.header.genre=Genre
+tabel.header.aantalTickets=Aantal Tickets
+tabel.header.startuur=Startuur
+tabel.header.acties=Acties
+tabel.header.subgenres=Subgenres
+tabel.header.festNum1=Festival Nummer 1
+tabel.header.festNum2=Festival Nummer 2
+
+# Extra
+tussenVoegselTijd=om
+access-denied.btnLogOut=Log uit
+btn.verwijder=Verwijder
+btn.voegOptredenToe=Voeg Optreden Toe
+
 # Home pagina
 home.page.title=Home
+home.titel.regios=Regio's
+home.titel.genres=Gengres
 
-#toevoegen optreden
+# Mijn ticketten
+mijnTicketten.titel=Mijn Ticketten:
+
+# Ticket kopen
+festival.info=Dit is festival genaamd {0} <br /> Er zijn nog {1} tickets beschikbaar.
+
+# Toevoegen optreden
 Validation.naamInvalid=Naam is ongeldig
 Validation.naamNull=Name is verplicht
