optreden toevoegen fixed

--- a/src/main/resources/i8n/messages.properties
+++ b/src/main/resources/i8n/messages.properties
@@ -1,4 +1,4 @@
-# Login pagina
+# Login page
 login.page.title=Login
 login.page.header.caption=A summer to never forget
 login.page.username.placeholder=Username
@@ -7,7 +7,7 @@ login.page.password.placeholder=Password
 # Nav bar
 nav.MijnTicketten = My Tickets
 
-# Tabel
+# Table
 tabel.header.naam=Name
 tabel.header.datumUur=Date and Time
 tabel.header.planning=Schedule
@@ -31,17 +31,25 @@ access-denied.btnLogOut=Log out
 btn.verwijder=Delete
 btn.voegOptredenToe=Add Performance
 
-# Home pagina
+# Home page
 home.page.title=Home
 home.titel.regios=Regions
 home.titel.genres=Genres
 
-# Mijn ticketten
+# My Tickets
 mijnTicketten.titel=My Tickets:
 
-# Ticket kopen
-festival.info=This is a festival called {0} <br /> There are {1} tickets left.
+# Buy Ticket
+festival.info=This is a festival called {0}. \n\n There are {1} tickets available.
 
-# Toevoegen optreden
+# Add Performance
 Validation.naamInvalid=Name is invalid
 Validation.naamNull=Name is required
+Validation.startuurBezet=The chosen time is already taken by another performance
+Validation.startuurInvalid=Start time must be between 10:00 and 23:00 and the minutes must be 00
+Validation.startuurNull=Start time cannot be empty
+Validation.subgenresSize=A maximum of 2 subgenres is allowed
+Validation.subgenresDuplicate=Two of the same genres are not allowed
+Validation.festivalNummer1Invalid=Festival number 1 must consist of 4 digits between 1000 and 9999
+Validation.festivalNummer1Multiple=Festival number 1 must be a multiple of 3
+Validation.festivalNummer2Invalid=Festival number 2 must be greater than or equal to festival number 1 and not more than festival number 1 + 1000
