--- a/src/main/resources/i8n/messages_nl.properties
+++ b/src/main/resources/i8n/messages_nl.properties
@@ -40,8 +40,17 @@ home.titel.genres=Gengres
 mijnTicketten.titel=Mijn Ticketten:
 
 # Ticket kopen
-festival.info=Dit is festival genaamd {0} <br /> Er zijn nog {1} tickets beschikbaar.
+festival.info=Dit is festival genaamd {0}. \n\n Er zijn nog {1} tickets beschikbaar.
+ticketKopen.succes={0} tickets werden aangekocht
 
 # Toevoegen optreden
 Validation.naamInvalid=Naam is ongeldig
-Validation.naamNull=Name is verplicht
+Validation.naamNull=Naam is verplicht
+Validation.startuurBezet=Het gekozen uur is al bezet door een ander optreden
+Validation.startuurInvalid=Startuur moet tussen 10:00 en 23:00 liggen en de minuten moeten 00 zijn
+Validation.startuurNull=Startuur mag niet leeg zijn
+Validation.subgenresSize=Maximum 2 subgenres mogen ingevuld worden
+Validation.subgenresDuplicate=Twee dezelfde genres mogen niet
+Validation.festivalNummer1Invalid=Festival-nummer1 moet uit 4 cijfers bestaan tussen 1000 en 9999
+Validation.festivalNummer1Multiple=Festival-nummer1 moet een veelvoud van 3 zijn
+Validation.festivalNummer2Invalid=Festival-nummer2 moet groter of gelijk zijn aan festival-nummer1 en niet hoger dan festival-nummer1 + 1000
