alles gefixt behalve test

--- a/src/main/resources/i8n/messages.properties
+++ b/src/main/resources/i8n/messages.properties
@@ -28,6 +28,7 @@ tabel.header.festNum2=Festival Number 2
 # Extra
 tussenVoegselTijd=at
 access-denied.btnLogOut=Log out
+access-denied.h2=Access denied
 btn.verwijder=Delete
 btn.voegOptredenToe=Add Performance
 
