--- a/src/main/resources/i8n/messages_nl.properties
+++ b/src/main/resources/i8n/messages_nl.properties
@@ -28,6 +28,7 @@ tabel.header.festNum2=Festival Nummer 2
 # Extra
 tussenVoegselTijd=om
 access-denied.btnLogOut=Log uit
+access-denied.h2=Toegang geweigerd
 btn.verwijder=Verwijder
 btn.voegOptredenToe=Voeg Optreden Toe
 
