final touches pt1

--- a/src/main/resources/i8n/messages.properties
+++ b/src/main/resources/i8n/messages.properties
@@ -24,7 +24,7 @@ tabel.header.acties=Actions
 tabel.header.subgenres=Subgenres
 tabel.header.festNum1=Festival Number 1
 tabel.header.festNum2=Festival Number 2
-
+tabel.header.ticketKopen=Buy Ticket
 # Extra
 tussenVoegselTijd=at
 access-denied.btnLogOut=Log out
