--- a/src/main/resources/i8n/messages_nl.properties
+++ b/src/main/resources/i8n/messages_nl.properties
@@ -24,6 +24,7 @@ tabel.header.acties=Acties
 tabel.header.subgenres=Subgenres
 tabel.header.festNum1=Festival Nummer 1
 tabel.header.festNum2=Festival Nummer 2
+tabel.header.ticketKopen=Ticket Kopen
 
 # Extra
 tussenVoegselTijd=om
